--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,10 @@
 	"name": "e-commerce-store",
 	"version": "1.0.0",
 	"description": "",
-	"main": "backend/server.js",
+	"main": "server.js",
 	"scripts": {
-		"dev": "nodemon backend/server.js",
-		"start": "node backend/server.js",
-		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+		"dev": "cross-env NODE_ENV=dev nodemon server.js",
+		"prod": "cross-env NODE_ENV=prod nodemon server.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -23,6 +22,7 @@
 		"stripe": "^16.8.0"
 	},
 	"devDependencies": {
-		"nodemon": "^3.1.4"
+		"nodemon": "^3.1.4",
+		"cross-env": "^7.0.3"
 	}
 }
